--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: #d9e2e8;
+}
 .pricing-container
 {
  max-width: 600px;
@@ -24,4 +28,5 @@
   border-radius: 5px;
   font-size: 18px;
   opacity: 0.9;
+  border: 0;
 }
