--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,9 @@ body {
   color: #333;
   margin-bottom: 30px;
 }
-.box-1 .box1-btn
+.box .box1-btn
 {
-  background-color: #e04553;
+ 
   text-decoration: none;
   color: #fff;
   padding: 10px 20px;
@@ -38,13 +38,21 @@ body {
   opacity: 0.9;
   border: 0;
 }
-.box-2 .box-1-btn
+.box-1 .box1-btn
+{
+   background-color: #e04553;
+}
+.box-2 .box1-btn
 {
   background:#0d4ba3;
 }
 .box-2 h2
 {
   color:#0d4ba3;
+}
+.box-3 .box1-btn
+{
+  background:#512b22;
 }
 .shoe-img
 {
