--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,10 @@ body {
 .box h2 {
     margin: 0;
 }
+.box p
+{
+      font-size: 18px;
+    font-weight: 500;
+    color: #333;
+    margin-bottom: 30px;
+}
